Profil-View angepasst: - verschoben nach profileEditView - CSS globalStyle enthält nun keine Positionen und Größen mehr => in die less Dateien der einzelnen Views v-profileEditView.less und v-signupView.less integriert - !important-Attribute wurden entfernt - Positionierung wird nun mit "position: relative" und "position: absolute" geregelt anstatt mit der Tabelle    => damit das funktioniert musste der z-index des fixen header-menüs hochgesetz werden

--- a/Frontend/dev/view/less/global/globalStyles.less
+++ b/Frontend/dev/view/less/global/globalStyles.less
@@ -23,7 +23,7 @@ html, body {
 /* style the labels of mandatory input fields */
 .required-input label::after {
   content: " *";
-  color: red;
+  color: @mandatoryAsteriskColor;
 }
 .required-input label {
   font-weight: bold;
@@ -34,18 +34,15 @@ html, body {
 */
 
 input[type=text], input[type=email], input[type=password], select {
-  width: 80%;
   padding: 12px 20px;
   margin: 8px 0;
-  display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
 input[type=submit], input[type=button] {
-  width: 80%;
-  background-color: @interactionColor1;
+  background-color: @interactionColor;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -55,7 +52,7 @@ input[type=submit], input[type=button] {
 }
 
 input[type=submit]:hover, input[type=button]:hover {
-  background-color: @interactionColor2;
+  background-color: @buttonHoverColor;
 }
 
 /*
@@ -106,7 +103,7 @@ input[type=submit]:hover, input[type=button]:hover {
   top: 3px; left: 4px;
   font-size: 18px;
   line-height: 0.8;
-  color: @interactionColor1;
+  color: @interactionColor;
   transition: all .2s;
 }
 /* checked mark aspect changes */
@@ -133,5 +130,5 @@ input[type=submit]:hover, input[type=button]:hover {
 }
 /* hover style just for information */
 label:hover:before {
-  border: 1px solid @interactionColor1!important;
+  border: 1px solid @interactionColor;
 }
