--- a/Frontend/dev/view/less/views/v-signupView.less
+++ b/Frontend/dev/view/less/views/v-signupView.less
@@ -1,3 +1,17 @@
-.v-signup-view > h1 {
+.v-signUp-view > h1 {
   text-align: left;
+}
+
+
+.v-signUp-view input[type=text],
+.v-signUp-view input[type=email],
+.v-signUp-view input[type=password],
+.v-signUp-view select {
+  width: 80%;
+  display: inline-block;
+}
+
+.v-signUp-view input[type=submit],
+.v-signUp-view input[type=button] {
+  width: 80%;
 }
